--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node-scss": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
     "scss": "^0.2.4",
